[gd_scene load_steps=12 format=3 uid="uid://cpq4gij1tp6fs"]

[ext_resource type="PackedScene" uid="uid://dicqjr60kd3lr" path="res://Scenes/projectiles/Player/test_player_projectile.tscn" id="2_1xgpa"]
[ext_resource type="Texture2D" uid="uid://cf2lepql7f2ab" path="res://true_ggs.png" id="2_2qm5b"]
[ext_resource type="Texture2D" uid="uid://dtcii1bhsg28p" path="res://icon.png" id="2_rqdkt"]
[ext_resource type="Script" path="res://Scripts/GG.gd" id="23"]

[sub_resource type="Animation" id="Animation_o5l0v"]
resource_name = "SHOOTING_LEFT"
length = 0.3
step = 0.05
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [Vector2(-270, 0)],
"method": &"spawn_projectile"
}]
}

[sub_resource type="Animation" id="Animation_cfmrw"]
resource_name = "SHOOTING_RIGHT"
length = 0.3
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [Vector2(270, 0)],
"method": &"spawn_projectile"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h07br"]
_data = {
"SHOOTING_LEFT": SubResource("Animation_o5l0v"),
"SHOOTING_RIGHT": SubResource("Animation_cfmrw")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ytxta"]
radius = 48.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nsu3j"]
size = Vector2(85.7143, 40)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qjrw8"]
radius = 48.0
height = 98.0

[sub_resource type="CanvasItemMaterial" id="8"]
light_mode = 1

[node name="GG" type="CharacterBody2D"]
floor_constant_speed = true
floor_snap_length = 9.0
script = ExtResource("23")
weapons = [ExtResource("2_1xgpa")]

[node name="Animator" type="AnimationPlayer" parent="."]
playback_process_mode = 0
libraries = {
"": SubResource("AnimationLibrary_h07br")
}

[node name="timers" type="Node2D" parent="."]

[node name="jump_timer" type="Timer" parent="timers"]
one_shot = true

[node name="ring_timer" type="Timer" parent="timers"]
wait_time = 0.15
one_shot = true

[node name="buffer" type="Timer" parent="timers"]
wait_time = 0.1
one_shot = true

[node name="c_timer" type="Timer" parent="timers"]
wait_time = 0.125
one_shot = true

[node name="camera" type="Camera2D" parent="."]
position = Vector2(0, -48)
position_smoothing_enabled = true
position_smoothing_speed = 25.0

[node name="right_ray" type="RayCast2D" parent="."]
self_modulate = Color(0.00784314, 1, 0, 1)
position = Vector2(0, 48)
target_position = Vector2(56, 0)

[node name="left_ray" type="RayCast2D" parent="."]
self_modulate = Color(0.172549, 1, 0, 1)
position = Vector2(0, 48)
target_position = Vector2(-56, 0)

[node name="down_ray" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(0, 400)

[node name="l_down_ray" type="RayCast2D" parent="down_ray"]
visible = false
position = Vector2(-49, 0)
target_position = Vector2(0, 400)

[node name="r_down_ray" type="RayCast2D" parent="down_ray"]
visible = false
position = Vector2(49, 0)
target_position = Vector2(0, 400)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ytxta")
debug_color = Color(0.701961, 0.815686, 0.537255, 0.419608)

[node name="areas" type="Node2D" parent="."]

[node name="ring_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ring_area"]
position = Vector2(-2.14577e-06, -76)
scale = Vector2(1.12, 1)
shape = SubResource("RectangleShape2D_nsu3j")

[node name="wall_ray_right" type="RayCast2D" parent="."]
target_position = Vector2(80, 0)

[node name="wall_ray_left" type="RayCast2D" parent="."]
target_position = Vector2(-80, 0)

[node name="jump_ray" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(0, 96)

[node name="rotate_cast" type="ShapeCast2D" parent="."]
visible = false
self_modulate = Color(0.933333, 0, 0.945098, 0.470588)
shape = SubResource("CapsuleShape2D_qjrw8")
target_position = Vector2(0, 0)

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(-9.53674e-07, 1.92593e-34)
scale = Vector2(0.35, 0.35)
texture = ExtResource("2_2qm5b")
offset = Vector2(822.857, 540)

[node name="clippy" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(0.745098, 0.0509804, 0.917647, 1)
texture_repeat = 3
texture = ExtResource("2_rqdkt")

[node name="debug" type="Node2D" parent="."]
visible = false
position = Vector2(1003, 15)
scale = Vector2(2, 1)

[node name="state" type="Label" parent="debug"]
material = SubResource("8")
offset_left = -976.0
offset_top = -608.0
offset_right = -847.0
offset_bottom = -579.0
rotation = 6.29473
scale = Vector2(1, 3)
size_flags_horizontal = 0
mouse_default_cursor_shape = 16
text = "State"

[node name="velocity" type="Label" parent="debug"]
material = SubResource("8")
offset_left = -976.0
offset_top = -560.0
offset_right = -847.0
offset_bottom = -531.0
rotation = 6.29473
scale = Vector2(1, 3)
size_flags_horizontal = 0
mouse_default_cursor_shape = 16
text = "Veljcity"

[node name="angle" type="Label" parent="debug"]
material = SubResource("8")
offset_left = -976.0
offset_top = -520.0
offset_right = -847.0
offset_bottom = -491.0
rotation = 6.29473
scale = Vector2(1, 3)
size_flags_horizontal = 0
mouse_default_cursor_shape = 16
text = "angle"

[node name="FPS" type="Label" parent="debug"]
material = SubResource("8")
offset_left = -976.0
offset_top = -472.0
offset_right = -847.0
offset_bottom = -443.0
rotation = 6.29473
scale = Vector2(1, 3)
size_flags_horizontal = 0
mouse_default_cursor_shape = 16
text = "FPS"

[node name="mem" type="Label" parent="debug"]
material = SubResource("8")
offset_left = -976.0
offset_top = -432.0
offset_right = -847.0
offset_bottom = -403.0
rotation = 6.29473
scale = Vector2(1, 3)
size_flags_horizontal = 0
mouse_default_cursor_shape = 16
text = "mem"

[node name="pos" type="Label" parent="debug"]
material = SubResource("8")
offset_left = -976.138
offset_top = -391.987
offset_right = -847.138
offset_bottom = -362.987
rotation = 6.29473
scale = Vector2(1, 3)
size_flags_horizontal = 0
mouse_default_cursor_shape = 16
text = "pos"

[node name="camera_zoom" type="Label" parent="debug"]
material = SubResource("8")
offset_left = -975.763
offset_top = -353.111
offset_right = -846.763
offset_bottom = -324.111
rotation = 6.29473
scale = Vector2(1, 3)
size_flags_horizontal = 0
mouse_default_cursor_shape = 16
text = "cam_zoom"

[node name="c_timer" type="Label" parent="debug"]
offset_left = -976.0
offset_top = -288.0
offset_right = -901.0
offset_bottom = -262.0
text = "c_time"

[node name="CANVAS" type="CanvasLayer" parent="."]
layer = 3

[node name="HUD" type="Control" parent="CANVAS"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -584.0
offset_right = -960.0
offset_bottom = -584.0
grow_horizontal = 2
grow_vertical = 2

[node name="Money" type="Label" parent="CANVAS/HUD"]
layout_mode = 0
offset_left = 1800.0
offset_top = 600.0
offset_right = 1933.0
offset_bottom = 626.0
scale = Vector2(8, 8)
text = "$"
horizontal_alignment = 2
